--- a/navbar-sticky1/styles.css
+++ b/navbar-sticky1/styles.css
@@ -80,7 +80,7 @@
     align-items: center;
     width: 100%;
     transform: translateX(100%);
-    transition: transform 0.5s ease-in;
+    /* transition: transform 0.5s ease-in; */
   }
 
   .nav-links li {
